# CrossBag

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  easytier-setup.md  rust-analysis-report.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  daemon.rs  easytier.rs  lib.rs  main.rs  network.rs  pairing.rs  protocol.rs  service.rs  state.rs  sync.rs  watcher.rs
tests/: easytier_integration_test.rs  integration_test.rs
