[package]
name = "crossbag"
version = "0.1.0"
edition = "2021"
description = "Cross-machine file sync over Easytier overlay network"
license = "Apache-2.0"
authors = ["bit-torch"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File watching
notify = { version = "6", features = ["macos_kqueue"] }

# Directory traversal
walkdir = "2"

# Fast hashing (serde feature for protocol serialization)
blake3 = { version = "1", features = ["serde"] }

# Network & serialization (1.x uses serde natively)
bincode = "1"
bytes = "1"

# System info
hostname = "0.4"

# Glob pattern matching
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for node identity
uuid = { version = "1", features = ["v4", "serde"] }

# Async file operations
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
